css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;


  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

*, *:before, *:after {
    box-sizing: inherit;
}

.body {
    margin: 0;
    padding: 0;
}

.logo {
    max-width: 12.5em;
    display: block;
    margin: 0 auto;
}


.header{
    display: block;
    width: 100%;
    background-color: black;
    background-position: center center;
    background-size: 100%;
    background-repeat: repeat;
    margin-left: auto;
    margin-right: auto;
    color: white;
    position:relative;
    z-index: 1000;
}

.bj-wrapper {
    position: relative;
    width: 200px;
    top: -30px;
    left: calc(50% - 100px);
    height: 200px; 
}

.bj-wrapper,
.bj-wrapper:link,
.bj-wrapper:visited {
    transition: all 2000ms ease-in-out 10ms;
}

.bj-wrapper:hover,
.bj-wrapper:focus,
.bj-wrapper:active {
    transform: scale(1.5) rotate(-11deg);
}

.bj {
    width: 130px;
    position: absolute;
    left: 30px;
    top: 40px;
}

.billboard {
    padding: 12%;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
    background-image: url(../images/brendan-billboard.jpg);
    width: 100%;
    height: 100vh; 
    overflow: hidden;
    position: relative;
}

.hello {
    list-style-type: none;
    line-height: 5em;
    border-radius: 3em;
    text-decoration: none;
    text-align: center;
    text-transform: capitalize;
    display: block;
    background-color: none;
    position: absolute;
    font-weight: lighter;
    top: 295px;
    color: black;
    left: calc(50% - 263px);
}

.hello ul, li {
    display: inline-block;
    padding: 0;
    margin: 0 auto;
}

.hello a,
.hello a:link,
.hello a:visited {
    transition: all 1000ms ease-in-out 10ms;
    text-decoration: none;
    color: white;
    text-align: center;
    font-weight: lighter;
    overflow: hidden;
}

.hello a:hover,
.hello a:focus,
.hello a:active {
    background-color: white;
    color: black;  
    line-height: 1em;
    border-radius: 6em;
    padding: 1em;
    text-align: center;
    font-weight: lighter; 
    color: black;
}

.shadows {
    background-image: url(../images/shadows.svg); 
    background-size: 466px 310px;
    width: 100%;
    height: calc(100vh + 310px);
    -webkit-animation: shadows 15s linear infinite;
    animation: shadows 15s linear infinite;
    position: absolute;
    top: 0;
    left: 0;
    overflow: hidden;
}

@-webkit-keyframes shadows {
    0% {
    -webkit-transform: translateY(0px);
    }
    100% {
    -webkit-transform: translateY(-310px)
    }
}

@keyframes shadows {
    0% {
    transform: translateY(0px);
    }
    100% {
    transform: translateY(-310px)
    }
}

.stitches {
    width: 200px;
    position: absolute;
    -webkit-animation: rotate 30s infinite;
    animation: rotate 30s infinite;
}

@keyframes rotate {
    from {
    -webkit-transform: rotate(0deg);
    }
    to {
    -webkit-transform: rotate(360deg);
    }
}
    @keyframes rotate {
    from {
    transform: rotate(0deg);
    }
    to {
    transform: rotate(360deg);
    }  
}

.button {
    line-height: 1.5em;
    border-radius: .2em;
    text-decoration: none;
    text-align: center;
    text-transform: capitalize;
    font-weight: bold;
    display: inline-block;
}


.nav-top li {
    display: inline-block;
}

.nav-top a,
.nav-top a:link,
.nav-top a:visited {
	display: inline-block;
	font-size: 1.25em;
	color: #fff;
	text-decoration: none;
    text-align: center;
}

.rtt {
    position: fixed;
    bottom: 1em;
    left: -1em;
    width: 5em;
    height: auto;
}

.byline {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    max-width: 500px;
}

.byline2 {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    width: 500px;
}

